; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_compute_ad_money.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-data.c_compute_ad_money.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.advert = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @compute_ad_money(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.advert*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.advert* @get_ad_f(i32 %4, i32 0)
  store %struct.advert* %5, %struct.advert** %3, align 8
  %6 = load %struct.advert*, %struct.advert** %3, align 8
  %7 = icmp ne %struct.advert* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.advert*, %struct.advert** %3, align 8
  %10 = getelementptr inbounds %struct.advert, %struct.advert* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %8
  %14 = phi i32 [ %11, %8 ], [ 0, %12 ]
  ret i32 %14
}

declare dso_local %struct.advert* @get_ad_f(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
